--- a/action.yaml
+++ b/action.yaml
@@ -1,14 +1,14 @@
 name: 'Hatch'
-description: 'Generate an API client based on the Swagger docs exposed by a microservice'
+description: 'Generate and publish a TypeScript-axios API client based on your OpenAPI spec'
 inputs: 
   path-to-json:
-    description: 'Path to json file with swagger docs'
+    description: 'Path to JSON-formatted OpenAPI spec'
     required: true
   service-name:
-    description: 'The slug of your service name'
+    description: 'Your service name (client will be published as your-service-name-client)'
     required: true
   github-registry-token:
-    description: 'GitHub Registry token'
+    description: 'Your GitHub Registry token'
     required: true
 runs:
   using: 'docker'
