--- a/action.yaml
+++ b/action.yaml
@@ -14,6 +14,6 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.path }}
-    - ${{ inputs.name }}
-    - ${{ inputs.token }}
+    - "$INPUT_PATH"
+    - "$INPUT_NAME"
+    - "$INPUT_TOKEN"
