--- a/action.yaml
+++ b/action.yaml
@@ -10,6 +10,9 @@ inputs:
   token:
     description: 'Your GitHub Registry token'
     required: true
+  repo:
+    description: 'Name of your GitHub repo NPM namespace (e.g. @myrepo)'
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -17,3 +20,4 @@ runs:
     - INPUT_PATH
     - INPUT_NAME
     - INPUT_TOKEN
+    - INPUT_REPO
