--- a/templates/tsconfig.json
+++ b/templates/tsconfig.json
@@ -4,7 +4,8 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
-    "declaration": true
+    "declaration": true,
+    "skipLibCheck": true
   },
   "include": ["./"],
   "exclude": ["node_modules", "dist"]
