Update tsconfig to compile decorators

--- a/templates/tsconfig.json
+++ b/templates/tsconfig.json
@@ -5,7 +5,9 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["./"],
   "exclude": ["node_modules", "dist"]
