--- a/templates/package.json.template
+++ b/templates/package.json.template
@@ -16,12 +16,15 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@nestjs/swagger": "^4.4.0",
+    "class-validator": "^0.12.2",
     "axios": "^0.19.1",
     "url": "^0.11.0",
     "typescript": "^3.7.4"
   },
   "peerDependencies": {
     "@nestjs/swagger": "^4.4.0",
+    "class-validator": "^0.12.2",
     "axios": "^0.19.1"
   }
 }
