Fix building models

--- a/templates/tsconfig.json
+++ b/templates/tsconfig.json
@@ -9,6 +9,6 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["./"],
+  "include": ["./", "./models"],
   "exclude": ["node_modules", "dist"]
 }
