--- a/action.yaml
+++ b/action.yaml
@@ -15,6 +15,7 @@ inputs:
     required: true
   repository_url: 
     description: 'The url of the GitHub repository in which the generated package should be published'
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
