Use provided registry namespace and clean up  (#13)
* use REGISTRY_NAMESPACE in package.json, update parameter names

* update README

* make generate-client script clearer

* allow user to specify repo url; clarify requirement of scoped package

* comments David

* make repository url required

--- a/action.yaml
+++ b/action.yaml
@@ -1,23 +1,27 @@
 name: 'Hatch'
 description: 'Generate and publish a TypeScript-axios API client based on your OpenAPI spec'
 inputs: 
-  path:
-    description: 'Path to JSON-formatted OpenAPI spec'
+  openapi_spec_url:
+    description: 'URL pointing at the JSON-formatted OpenAPI v3 spec for your service'
     required: true
-  name:
-    description: 'Your service name (client will be published as your-service-name-client)'
-    required: true
-  token:
-    description: 'Your GitHub Registry token'
+  package_name:
+    description: 'The name to use for the generated client package'
     required: true
   registry_namespace:
-    description: 'Name of your GitHub NPM registry namespace (without the "@" where applicable)'
+    description: 'Name of the GitHub NPM registry namespace under which you want to publish the generated package, eg "@my-namespace"'
+    required: true
+  registry_token:
+    description: 'Your GitHub NPM registry token'
+    required: true
+  repository_url: 
+    description: 'The url of the GitHub repository in which the generated package should be published'
     required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - INPUT_PATH
-    - INPUT_NAME
-    - INPUT_TOKEN
+    - INPUT_OPENAPI_SPEC_URL
+    - INPUT_PACKAGE_NAME
     - INPUT_REGISTRY_NAMESPACE
+    - INPUT_REGISTRY_TOKEN
+    - INPUT_REPOSITORY_URL
